// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TableRenderer /> > renders a 1x3 table 1`] = `
"
┌──────────┬──────────┬──────────┐
│ Column 1 │ Column 2 │ Column 3 │
├──────────┼──────────┼──────────┤
└──────────┴──────────┴──────────┘
"
`;

exports[`<TableRenderer /> > renders a 3x1 table 1`] = `
"
┌──────────┐
│ Column 1 │
├──────────┤
│ 1        │
│ A        │
└──────────┘
"
`;

exports[`<TableRenderer /> > renders a 3x3 table 1`] = `
"
┌──────────┬────────────────────────┬──────────┐
│ Column 1 │ Column 2               │ Column 3 │
├──────────┼────────────────────────┼──────────┤
│ 1        │ 2                      │ 3        │
│ A        │ Longer than the header │ C        │
└──────────┴────────────────────────┴──────────┘
"
`;

exports[`<TableRenderer /> > renders inline Markdown 1`] = `
"
┌──────────┬──────────┬──────────┐
│ Column 1 │ Column 2 │ Column 3 │
├──────────┼──────────┼──────────┤
│ 1        │ 2        │ 3        │
└──────────┴──────────┴──────────┘
"
`;

exports[`<TableRenderer /> > truncates overflowing headers 1`] = `
"
┌────────┬────────┬────────────────────────────────────────────────────┬────────┐
│ Col... │ Col... │ This is a very long column header that should t... │ Col... │
├────────┼────────┼────────────────────────────────────────────────────┼────────┤
│ 1      │ 2      │ 3                                                  │ 4      │
│ A      │ B      │ C                                                  │ D      │
└────────┴────────┴────────────────────────────────────────────────────┴────────┘
"
`;

exports[`<TableRenderer /> > truncates overflowing table cells 1`] = `
"
┌────────┬───────────────────────────────────────────────────┬────────┬────────┐
│ Col... │ Column 2                                          │ Col... │ Col... │
├────────┼───────────────────────────────────────────────────┼────────┼────────┤
│ 1      │ This is a very long table cell that should tri... │ 3      │ 4      │
│ A      │ B                                                 │ C      │ D      │
└────────┴───────────────────────────────────────────────────┴────────┴────────┘
"
`;
